[tool.poetry]
name = "sqlalchemy-orm"
version = "0.1.0"
description = ""
authors = ["fredsonchaves07 <fredsonchaves07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.7"
SQLAlchemy = "^1.4.24"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
